<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContextRecognition</string>
    
    <string name="hello_world">Hello world!</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_diary">Diary</string>
    <string name="action_manage_classes">Manage Classes</string>
    <string name="action_rating">Rate our app</string>
    <string name="action_help">Help</string>
    <string name="action_upload">Upload</string>
    <string name="action_exit">Stop recording and exit</string>
    
    <string name="label_settings">Settings</string>
    <string name="label_diary">Diary</string>
    <string name="label_manage_classes">Mange context classes</string>
    <string name="label_rating">Rate our app</string>
    <string name="label_help">Help</string>
    <string name="label_context_selection">Select correct context class</string>
    <string name="label_upload">Upload audio files</string>

    <string name="button_confirm">Confirm</string>
    
    <string name="settings_query_text">The maximum number of feedback queries you are will to give per day:</string>
    <string name="settings_warning">Remember that the accurcy will be better when more feedback is given</string>
    
    <!-- Rating Actitivity -->
    <string name="rating_performance_increase">Did you feel that the prediction accuracy increased after using the 
        app for a couple of days? </string>
    <string name="rating_disturbing">Did you find the query requests disturbing?</string>
    <string name="rating_fixed_traing_phase">Would you be more willing to answer more request 
        in the following scenario: Queries can only be asked in a fixed training phase of e.g. two days
        when starting to use the app, after that the user won’t be queried anymore at all.</string>
    <string name="rating_visualization_useful">How useful did you find the visualization of 
        your daily activities?</string>
    <string name="rating_visualization_accurate">Did you find the visualization of your 
        daily activities accurate?</string>
    <string name="rating_other_applications">Could you think of other applications that would be possible 
        with / would benefit from this kind of context prediction?</string>
    <string name="rating_comforable">Do you feel comfortable with audio data used for recognition?</string>
    <string name="rating_audio_concerns">What are your concern regarding audio data used 
        for recognition?</string>
    <string name="rating_privacy_imporovement">Could you think of ways to protect privacy 
        of users better?</string>
    <string name="rating_hint">Please feel free to give any other feedback</string>
    <string name="rating_submit_button">Submit</string>
    
    <string name="rating_ask_for_evaluation">Thanks you for your feedback! Would you like to help our 
        project even further and fill out our evaluation for in less the 5 minutes?</string>
    
    <string name="activity_annotation"><u><b>Annotate your activities:</b></u></string>
    
    <string name="welcome_text_1">This app will recognize daily activities like taking the train, 
        eating at a restaurant etc. based on ambient sound recorded by your phone.\n\n\n\nYou can select the
        activities you would like to be recognized later, but keep in mind, that they have to be
        discriminable by their sound.</string>
    <string name="welcome_text_2_upper">In order to get the best possible recognition accuracy, the app
        will ask you about your current activity from time to time. You can an upper limit
        for the amount of these requests here:</string>
    <string name="welcome_text_2_lower">Additionally you can always provide this feedback voluntarily
        by clicking on the pencil and the tick mark icon on the main screen.</string>
    <string name="welcome_text_3">Please select the activities here that you would like to be recognized:</string>
    <string name="welcome_button">Start using the app</string>
    <string name="prev_button">Previous</string>
    <string name="next_button">Next</string>
    
    <!-- Upload activity -->
    <string name="upload_failed">If the automatic upload of your audio data failed,
        please start it again by pressing the button:</string>
    <string name="upload_again_button">Start upload</string>
    
    <!-- Manage classes activity activity -->
    <string name="manage_classes_text">Add new classes and remove 
         by unselecting exsisting classes by unselecting:</string>
    <string name="button_apply_changes">Apply changes</string>
    
    <string name="test">Test123</string>
    <string name="test_office">Office</string>
	
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    
    <string name="okay">Okay</string>
    <string name="no_thanks">No thanks</string>
    
    <string name="query_text">Tell us your current context</string>
    
    
</resources>
