<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.contextrecognition.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
	<item
	    android:id="@+id/action_diary"
	    android:orderInCategory="100"
	    android:title="@string/action_diary"
	    app:showAsAction="never"/>
    <item
	    android:id="@+id/action_manage_classes"
	    android:orderInCategory="100"
	    android:title="@string/action_manage_classes"
	    app:showAsAction="never"/>
    <item
        android:id="@+id/action_rating"
        android:orderInCategory="100"
        android:title="@string/action_rating"
        app:showAsAction="never"/>
<!--     <item -->
<!--         android:id="@+id/action_help" -->
<!--         android:orderInCategory="100" -->
<!--         android:title="@string/action_help" -->
<!--         app:showAsAction="never"/> -->
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/action_upload"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>
